styles/swiperJs/SwiperNav.module.css
.swiperNav {
  color: theme("colors.bg-color");
}
.swiperNav > div {
  background-color: theme("colors.primary");
  border-radius: 200px;
  top: 50%;
  transform: translateY(-50%);
}
.swiperNext {
  right: 1%;
  margin-right: 10px;
}
.swiperPrev {
  left: 1%;
  margin-left: 10px;
}
.swiperDisabled {
  opacity: 0.5;
}

